monitoring/kubecost/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubecost
  namespace: kubecost
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
  hostnames:
    - "kubecost.vanillax.xyz"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kubecost-cost-analyzer
          port: 9090
